// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match snapshot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-9 {
  display: none;
}
.modal__content-0-0-10 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__backdrop-0-0-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.modal__header-0-0-12 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-12 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-13 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-14 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-14:hover {
  opacity: 1;
}
.modal__actions-0-0-15 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-15 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-16 {
  display: block;
}
.transitions-0-0-17 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-9">
        <div class="modal__backdrop-0-0-11"></div>
        <div class="modal__content-0-0-10">
          <div class="modal__body-0-0-13">
            <slot></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot when opened 1`] = `
<scale-modal opened="true">
  <mock:shadow-root>
    <style>
      .modal-0-0-9 {
  display: none;
}
.modal__content-0-0-10 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__backdrop-0-0-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.modal__header-0-0-12 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-12 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-13 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-14 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-14:hover {
  opacity: 1;
}
.modal__actions-0-0-15 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-15 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-16 {
  display: block;
}
.transitions-0-0-17 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-9">
        <div class="modal__backdrop-0-0-11"></div>
        <div class="modal__content-0-0-10">
          <div class="modal__body-0-0-13">
            <slot></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot with actions slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-43 {
  display: none;
}
.modal__content-0-0-44 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__backdrop-0-0-45 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.modal__header-0-0-46 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-46 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-47 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-48 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-48:hover {
  opacity: 1;
}
.modal__actions-0-0-49 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-49 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-50 {
  display: block;
}
.transitions-0-0-51 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-43">
        <div class="modal__backdrop-0-0-45"></div>
        <div class="modal__content-0-0-44">
          <div class="modal__body-0-0-47">
            <slot></slot>
          </div>
          <div class="modal__actions-0-0-49">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="modal-actions">
    Action buttons
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with close slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-60 {
  display: none;
}
.modal__content-0-0-61 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__backdrop-0-0-62 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.modal__header-0-0-63 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-63 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-64 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-65 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-65:hover {
  opacity: 1;
}
.modal__actions-0-0-66 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-66 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-67 {
  display: block;
}
.transitions-0-0-68 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-60">
        <div class="modal__backdrop-0-0-62"></div>
        <div class="modal__content-0-0-61">
          <div class="modal__body-0-0-64">
            <slot></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="close">
    Close
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with header slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-26 {
  display: none;
}
.modal__content-0-0-27 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__backdrop-0-0-28 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.modal__header-0-0-29 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-29 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-30 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-31 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-31:hover {
  opacity: 1;
}
.modal__actions-0-0-32 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-32 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-33 {
  display: block;
}
.transitions-0-0-34 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-26">
        <div class="modal__backdrop-0-0-28"></div>
        <div class="modal__content-0-0-27">
          <div class="modal__header-0-0-29">
            <slot name="header"></slot>
            <a class="modal__close-0-0-31">
              x
            </a>
          </div>
          <div class="modal__body-0-0-30">
            <slot></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="header">
    Header content
  </span>
  A title
</scale-modal>
`;
